2000-12-02  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (getExpander):  New method.
	* kawa/lang/Translator.java (addGlobal):  Removed method.
	(getBinding):  Lookup using hygiene-resolved name.
	(pushBinding):  Do nothing if new value is name as old.
	
	* kawa/standard/define.java (scanForDefinitions):  Do pushBinding.
	* kawa/standard/define_unit.java:  Do pushBinding, not addGlobal.
	* kawa/standard/define_syntax.java:  Likewise.
	* kawa/standard/require.java (scanForDefinitions):  Likewise.
	Also if value is a Macro, call bind on it.

	* kawa/standard/open_output_file.java (openOutputFile):  New static.

2000-11-21  Matthias Radestock <matthias@lshift.net>

	* kawa/standard/load.java (apply): Removes an incorrect fall-through
	that results in files to be loaded twice.

	* kawa/standard/require.java (find): Fixes lookup of module class
	instances which resulted in multiple require's for the same module
	to loadExecute the module multiple times

2000-10-23  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java (compile_to_files):  Strip off any file
	extension, not just ".scm" or ".el".

2000-08-31  Emmanuel Castro <castro@lirmm.fr>

	* kawa/standard/require (finf):  Fix typo in error message.

2000-10-13  Per Bothner  <per@bothner.com>

	* kawa/lang/Syntax.java:  No longer extend Declaration.
	(getName, setName):  New methods.
	(<init>):  Do nothing - since not a Declaration.
	* kawa/lang/Macro.java (bind):  New method.

	* kawa/lang/Record.java (put): Swap arguments in call to set1,
	due to change in setter conventions.
	* kawa/standard/cxr.java (set1):  Swap arguments for new convention.
	* kawa/standard/make.java (applyN):  Likewise.
	* kawa/standard/set_b.java (rewrite):  Likewise.

	* kawa/lang/Translator.java:  Significant changes to support that
	Syntax no longer extends Declaration, and that the introduction
	of StaticFieldConstraint (which could replace autoloading).
